crates/monochange/tests/snapshots/cli_help__help_analyze_shows_detailed_help@help_analyze_shows_detailed_help.snap
---
source: crates/monochange/tests/cli_help.rs
info:
  program: monochange
  args:
    - help
    - analyze
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Analyze semantic changes for one package across main, head, and optional release baselines

Usage: monochange analyze [OPTIONS] --package <PACKAGE>

Options:
      --package <PACKAGE>
          Configured package id, discovered package id, package name, manifest path, or package directory

      --release-ref <REF>
          Explicit release baseline ref. Defaults to the latest tag for the package or owning version group

      --main-ref <REF>
          Base branch or ref to compare against. Defaults to the detected default branch

      --head-ref <REF>
          Head ref to analyze. Defaults to HEAD

      --detection-level <detection-level>
          Level of semantic detail to request from analyzers
          
          [default: signature]
          [possible values: basic, signature, semantic]

      --format <format>
          Output format
          
          [default: text]
          [possible values: text, json, json-min, markdown, md]

  -h, --help
          Print help

Global Options:
  -q, --quiet
          Suppress result, progress, and diagnostic output without changing execution

  -v, --verbose
          Show full result lists and logs, every step timing, and progress notes

      --progress-format <FORMAT>
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      --jq <EXPRESSION>
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      --snapshot
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange analyze --package core
  monochange analyze --package core --format json
  monochange analyze --package core --release-ref core/v1.2.3
  monochange analyze --package core --main-ref main --head-ref HEAD

Analysis notes:
  - Runs package-scoped semantic analysis using the selected package's configured release identity.
  - Defaults `--release-ref` to the newest tag for the package or the version group that owns it.
  - If no prior release tag exists, falls back to first-release analysis using only `main -> head`.


----- stderr -----
