crates/monochange/tests/snapshots/cli_help__help_init_shows_detailed_help@help_init_shows_detailed_help.snap
---
source: crates/monochange/tests/cli_help.rs
info:
  program: monochange
  args:
    - help
    - init
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Generate monochange.toml with detected packages and groups

Usage: monochange init [OPTIONS]

Options:
      --force
          Overwrite an existing monochange.toml file

      --provider <provider>
          Configure release automation for the specified provider. When provided, the generated config includes:
          
          - [source] section with the provider configured
          - Release and pull request settings for the provider
          - A minimal starter config without generated [cli.*] command aliases
          - GitHub Actions workflows (for --provider=github)
          
          Supported providers: github, gitlab, gitea
          
          [possible values: github, gitlab, gitea]

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -q, --quiet
          Suppress result, progress, and diagnostic output without changing execution

  -v, --verbose
          Show full result lists and logs, every step timing, and progress notes

      --progress-format <FORMAT>
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      --jq <EXPRESSION>
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      --snapshot
          Print a normalized JSON snapshot for this command subtree


----- stderr -----
