crates/monochange/tests/snapshots/cli_help__help_notes_shows_selection_and_destination_rules@help_notes_shows_selection_and_destination_rules.snap
---
source: crates/monochange/tests/cli_help.rs
info:
  program: monochange
  args:
    - help
    - notes
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Render one configured release-note output without modifying release files

Usage: monochange notes [OPTIONS] --output <OUTPUT>

Options:
      --output <OUTPUT>
          Configured changelog output to render

      --target <TARGET>
          Package or group id to select from a multi-target output

      --file <PATH>
          Write notes to this path instead of stdout; use - for stdout

  -h, --help
          Print help

Global Options:
  -q, --quiet
          Suppress result, progress, and diagnostic output without changing execution

  -v, --verbose
          Show full result lists and logs, every step timing, and progress notes

      --progress-format <FORMAT>
          Control progress output on stderr
          
          [possible values: auto, unicode, ascii, json]

      --jq <EXPRESSION>
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      --snapshot
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange notes --output user_notes
  monochange notes --output user_notes --target app
  monochange notes --output user_notes --target app --file release-notes.md
  monochange notes --output user_notes --target app --file -

Selection rules:
  - --output names `default` or a [changelog.outputs.<id>] entry.
  - The selected output supplies the stream and format; this command does not override either.
  - Use --target when an output produces notes for more than one package or group.
  - stdout is the default destination. --file writes only that explicit path.
  - Rendering is read-only: changesets, versions, and configured changelog paths are not modified.


----- stderr -----
