crates/monochange/tests/snapshots/cli_help__help_release_shows_detailed_help@help_release_shows_detailed_help.snap
---
source: crates/monochange/tests/cli_help.rs
info:
  program: monochange
  args:
    - help
    - run
    - release
  env:
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
╭──────────────────────────────────────────────────────────╮
│  monochange release                                      │
│  Prepare a release from discovered change files          │
╰──────────────────────────────────────────────────────────╯

▸ Description

  Reads all changeset files in .changeset/, plans version bumps and changelog updates, and prepares the release artifacts. By default, output is rendered in markdown format.

  In dry-run mode, no files are modified. Use --diff to see unified file diffs for the planned changes. Use --prepared-release to read or write a cached release artifact for multi-step workflows.

▸ Usage

  monochange release [OPTIONS]

▸ Options

  --dry-run                 Preview without modifying files
  --diff                    Show unified file diffs for the release
  --format <FORMAT>          markdown, text, json (default: markdown)
  --prepared-release <PATH>  Read/write prepared release artifact path

▸ Examples

  Dry-run preview in text format:
    monochange release --dry-run --format text

  Dry-run with JSON for scripting:
    monochange release --dry-run --format json

  Preview with file diffs:
    monochange release --dry-run --diff

  Execute the release:
    monochange release

▸ Tips

  • Direct package changes propagate to dependents using defaults.parent_bump.
  • Group synchronization happens before final output is rendered.
  • Explicit versions on grouped members propagate to the whole group.
  • Use --prepared-release to cache the release for multi-step workflows.

▸ See Also

  monochange help change  monochange help versions  monochange help commit-release  monochange help release-pr


----- stderr -----
