crates/monochange/tests/snapshots/cli_help__help_unknown_command_shows_error_and_list@help_unknown_command_shows_error_and_list.snap
---
source: crates/monochange/tests/cli_help.rs
info:
  program: monochange
  args:
    - help
    - nonexistent
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
error: unrecognized command path `monochange nonexistent`

Run one of these commands to inspect available help paths:
  monochange --help
  monochange help

Visible top-level commands:
  affected
  analyze
  api
  change
  changeset
  check
  command
  config
  create
  diagnose
  discover
  help
  init
  lint
  mcp
  migrate
  next
  notes
  populate
  prepare
  preview
  publish
  publish-check
  release
  run
  skill
  snapshot
  step
  subagents
  versions


----- stderr -----
