crates/monochange/tests/snapshots/cli_help__run_change_help_shows_detailed_help@run_change_help_shows_detailed_help.snap
---
source: crates/monochange/tests/cli_help.rs
info:
  program: monochange
  args:
    - run
    - change
    - "--help"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Create a change file for one or more packages

Usage: monochange run change [--dry-run] [--interactive] --package <PACKAGE> [--bump <BUMP>] --reason <REASON> [--version <VERSION>] [--type <TYPE>] [--caused-by <CAUSED_BY>] [--details <DETAILS>] [--output <PATH>]

Options:
  -h, --help  Print help

Release Options:
      --dry-run  Run the command in dry-run mode when supported

Options:
  -i, --interactive            
      --package <PACKAGE>      
      --bump <BUMP>            [default: patch] [possible values: none, patch, minor, major]
      --reason <REASON>        
      --version <VERSION>      
      --type <TYPE>            
      --caused-by <CAUSED_BY>  
      --details <DETAILS>      
      --output <PATH>          

Global Options:
  -q, --quiet                     Suppress result, progress, and diagnostic output without changing execution
  -v, --verbose                   Show full result lists and logs, every step timing, and progress notes
      --progress-format <FORMAT>  Control progress output on stderr [possible values: auto, unicode, ascii, json]
      --jq <EXPRESSION>           Filter explicit JSON output; requires `--format json` or `--format json-min`
      --snapshot                  Print a normalized JSON snapshot for this command subtree

Examples:
  monochange run change --package sdk-core --bump patch --reason "fix panic"
  monochange run change --package sdk-core --bump minor --reason "add API" --output .changeset/sdk-core.md
  monochange run change --package sdk --bump minor --reason "coordinated release"
  monochange run change --package sdk-config --bump none --caused-by sdk-core --reason "dependency-only follow-up"

Rules:
  - Prefer configured package ids in change files whenever a leaf package changed.
  - Use a group id only when the change is intentionally owned by the whole group.
  - Dependents and grouped members are propagated automatically during planning.
  - Use `--caused-by` when a package is only changing because another package or group moved first.
  - Legacy manifest paths may still resolve during migration, but declared ids are the stable interface.


----- stderr -----
